@@ -44,6 +44,7 @@ endif::[]
 
 - Fixed setting outcome in Mongo spy when not traced {pull}937[#937]
 - Fixed missing container metadata in payloads {pull}942[#942]
+- Fixed outgoing HTTP request spans with no Host {pull}962[#962]
 
 [[release-notes-3.13.0]]
 ==== 3.13.0 (2020-12-22)
